--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,16 @@ instance/
 # Scrapy stuff:
 .scrapy
 
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
 # Sphinx documentation
 docs/_build/
 
